# lpcost

./: pyproject.toml
lpcost/: 2_weekly_demand.csv  3_weekly_sales.csv  4_transport_cost.csv  5_initial_inventory.csv  Inventory_Optimization.ipynb  __init__ copy.py  __init__.py  inventory_optimization.py  optimize.ipynb
